myxql-parser-job/src/main/java/com/myxql/parser/job/antlr4/MyxqlJobParser.java
// Generated from com\myxql\parser\job\antlr4\MyxqlJobParser.g4 by ANTLR 4.7
package com.myxql.parser.job.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MyxqlJobParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SPACE=1, SPEC_MYSQL_COMMENT=2, COMMENT_INPUT=3, LINE_COMMENT=4, SET=5, 
		UNSET=6, USE=7, STAR=8, DIVIDE=9, MODULE=10, PLUS=11, MINUS=12, EQUAL_SYMBOL=13, 
		GREATER_SYMBOL=14, LESS_SYMBOL=15, EXCLAMATION_SYMBOL=16, BIT_NOT_OP=17, 
		BIT_OR_OP=18, BIT_AND_OP=19, BIT_XOR_OP=20, DOT=21, LR_BRACKET=22, RR_BRACKET=23, 
		COMMA=24, SEMI=25, OPEN_BRACKET=26, CLOSE_BRACKET=27, UNDERLINE=28, QUESTION_MARK=29, 
		SELECT=30, CREATE=31, ALTER=32, DROP=33, SHOW=34, ANALYZE=35, EXPLAIN=36, 
		DESC=37, REFRESH=38, COMMENT=39, CACHE=40, UNCACHE=41, LOAD=42, CLEAR=43, 
		TRUNCATE=44, RESET=45, DOT_ID=46, ID=47, REVERSE_QUOTE_ID=48, STRING_LITERAL=49, 
		ERROR_RECONGNIGION=50;
	public static final int
		RULE_root = 0, RULE_jobCommonds = 1, RULE_jobCommond = 2, RULE_execCommond = 3, 
		RULE_resourceNameExpr = 4, RULE_classNameExpr = 5, RULE_paramsExpr = 6, 
		RULE_paramExpr = 7, RULE_filePath = 8, RULE_setCommond = 9, RULE_unsetCommond = 10, 
		RULE_useCommond = 11, RULE_sqlCommond = 12, RULE_keyExpr = 13, RULE_valueExpr = 14, 
		RULE_word = 15, RULE_emptyCommond = 16;
	public static final String[] ruleNames = {
		"root", "jobCommonds", "jobCommond", "execCommond", "resourceNameExpr", 
		"classNameExpr", "paramsExpr", "paramExpr", "filePath", "setCommond", 
		"unsetCommond", "useCommond", "sqlCommond", "keyExpr", "valueExpr", "word", 
		"emptyCommond"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, "'SET'", "'UNSET'", "'USE'", "'*'", "'/'", 
		"'%'", "'+'", "'-'", "'='", "'>'", "'<'", "'!'", "'~'", "'|'", "'&'", 
		"'^'", "'.'", "'('", "')'", "','", "';'", "'['", "']'", "'_'", "'?'", 
		"'SELECT'", "'CREATE'", "'ALTER'", "'DROP'", "'SHOW'", "'ANALYZE'", "'EXPLAIN'", 
		"'DESC'", "'REFRESH'", "'COMMENT'", "'CACHE'", "'UNCACHE'", "'LOAD'", 
		"'CLEAR'", "'TRUNCATE'", "'RESET'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SPACE", "SPEC_MYSQL_COMMENT", "COMMENT_INPUT", "LINE_COMMENT", 
		"SET", "UNSET", "USE", "STAR", "DIVIDE", "MODULE", "PLUS", "MINUS", "EQUAL_SYMBOL", 
		"GREATER_SYMBOL", "LESS_SYMBOL", "EXCLAMATION_SYMBOL", "BIT_NOT_OP", "BIT_OR_OP", 
		"BIT_AND_OP", "BIT_XOR_OP", "DOT", "LR_BRACKET", "RR_BRACKET", "COMMA", 
		"SEMI", "OPEN_BRACKET", "CLOSE_BRACKET", "UNDERLINE", "QUESTION_MARK", 
		"SELECT", "CREATE", "ALTER", "DROP", "SHOW", "ANALYZE", "EXPLAIN", "DESC", 
		"REFRESH", "COMMENT", "CACHE", "UNCACHE", "LOAD", "CLEAR", "TRUNCATE", 
		"RESET", "DOT_ID", "ID", "REVERSE_QUOTE_ID", "STRING_LITERAL", "ERROR_RECONGNIGION"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyxqlJobParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyxqlJobParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MyxqlJobParser.EOF, 0); }
		public JobCommondsContext jobCommonds() {
			return getRuleContext(JobCommondsContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyxqlJobParserVisitor ) return ((MyxqlJobParserVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SET) | (1L << UNSET) | (1L << USE) | (1L << DIVIDE) | (1L << SEMI) | (1L << SELECT) | (1L << CREATE) | (1L << ALTER) | (1L << DROP) | (1L << SHOW) | (1L << ANALYZE) | (1L << EXPLAIN) | (1L << DESC) | (1L << REFRESH) | (1L << COMMENT) | (1L << CACHE) | (1L << UNCACHE) | (1L << LOAD) | (1L << CLEAR) | (1L << TRUNCATE) | (1L << RESET) | (1L << ID))) != 0)) {
				{
				setState(34);
				jobCommonds();
				}
			}

			setState(37);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JobCommondsContext extends ParserRuleContext {
		public List<JobCommondContext> jobCommond() {
			return getRuleContexts(JobCommondContext.class);
		}
		public JobCommondContext jobCommond(int i) {
			return getRuleContext(JobCommondContext.class,i);
		}
		public List<EmptyCommondContext> emptyCommond() {
			return getRuleContexts(EmptyCommondContext.class);
		}
		public EmptyCommondContext emptyCommond(int i) {
			return getRuleContext(EmptyCommondContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(MyxqlJobParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(MyxqlJobParser.SEMI, i);
		}
		public JobCommondsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jobCommonds; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).enterJobCommonds(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).exitJobCommonds(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyxqlJobParserVisitor ) return ((MyxqlJobParserVisitor<? extends T>)visitor).visitJobCommonds(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JobCommondsContext jobCommonds() throws RecognitionException {
		JobCommondsContext _localctx = new JobCommondsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_jobCommonds);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(43);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case SET:
					case UNSET:
					case USE:
					case DIVIDE:
					case SELECT:
					case CREATE:
					case ALTER:
					case DROP:
					case SHOW:
					case ANALYZE:
					case EXPLAIN:
					case DESC:
					case REFRESH:
					case COMMENT:
					case CACHE:
					case UNCACHE:
					case LOAD:
					case CLEAR:
					case TRUNCATE:
					case RESET:
					case ID:
						{
						setState(39);
						jobCommond();
						setState(40);
						match(SEMI);
						}
						break;
					case SEMI:
						{
						setState(42);
						emptyCommond();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(47);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET:
			case UNSET:
			case USE:
			case DIVIDE:
			case SELECT:
			case CREATE:
			case ALTER:
			case DROP:
			case SHOW:
			case ANALYZE:
			case EXPLAIN:
			case DESC:
			case REFRESH:
			case COMMENT:
			case CACHE:
			case UNCACHE:
			case LOAD:
			case CLEAR:
			case TRUNCATE:
			case RESET:
			case ID:
				{
				setState(48);
				jobCommond();
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(49);
					match(SEMI);
					}
				}

				}
				break;
			case SEMI:
				{
				setState(52);
				emptyCommond();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JobCommondContext extends ParserRuleContext {
		public SetCommondContext setCommond() {
			return getRuleContext(SetCommondContext.class,0);
		}
		public UnsetCommondContext unsetCommond() {
			return getRuleContext(UnsetCommondContext.class,0);
		}
		public UseCommondContext useCommond() {
			return getRuleContext(UseCommondContext.class,0);
		}
		public SqlCommondContext sqlCommond() {
			return getRuleContext(SqlCommondContext.class,0);
		}
		public ExecCommondContext execCommond() {
			return getRuleContext(ExecCommondContext.class,0);
		}
		public JobCommondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jobCommond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).enterJobCommond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).exitJobCommond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyxqlJobParserVisitor ) return ((MyxqlJobParserVisitor<? extends T>)visitor).visitJobCommond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JobCommondContext jobCommond() throws RecognitionException {
		JobCommondContext _localctx = new JobCommondContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_jobCommond);
		try {
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				setCommond();
				}
				break;
			case UNSET:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				unsetCommond();
				}
				break;
			case USE:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				useCommond();
				}
				break;
			case SELECT:
			case CREATE:
			case ALTER:
			case DROP:
			case SHOW:
			case ANALYZE:
			case EXPLAIN:
			case DESC:
			case REFRESH:
			case COMMENT:
			case CACHE:
			case UNCACHE:
			case LOAD:
			case CLEAR:
			case TRUNCATE:
			case RESET:
				enterOuterAlt(_localctx, 4);
				{
				setState(58);
				sqlCommond();
				}
				break;
			case DIVIDE:
			case ID:
				enterOuterAlt(_localctx, 5);
				{
				setState(59);
				execCommond();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExecCommondContext extends ParserRuleContext {
		public ResourceNameExprContext resourceNameExpr() {
			return getRuleContext(ResourceNameExprContext.class,0);
		}
		public ClassNameExprContext classNameExpr() {
			return getRuleContext(ClassNameExprContext.class,0);
		}
		public ParamsExprContext paramsExpr() {
			return getRuleContext(ParamsExprContext.class,0);
		}
		public ExecCommondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_execCommond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).enterExecCommond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).exitExecCommond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyxqlJobParserVisitor ) return ((MyxqlJobParserVisitor<? extends T>)visitor).visitExecCommond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExecCommondContext execCommond() throws RecognitionException {
		ExecCommondContext _localctx = new ExecCommondContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_execCommond);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			resourceNameExpr();
			setState(63);
			classNameExpr();
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIVIDE) | (1L << ID) | (1L << STRING_LITERAL))) != 0)) {
				{
				setState(64);
				paramsExpr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResourceNameExprContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MyxqlJobParser.ID, 0); }
		public List<TerminalNode> DOT_ID() { return getTokens(MyxqlJobParser.DOT_ID); }
		public TerminalNode DOT_ID(int i) {
			return getToken(MyxqlJobParser.DOT_ID, i);
		}
		public FilePathContext filePath() {
			return getRuleContext(FilePathContext.class,0);
		}
		public ResourceNameExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resourceNameExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).enterResourceNameExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).exitResourceNameExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyxqlJobParserVisitor ) return ((MyxqlJobParserVisitor<? extends T>)visitor).visitResourceNameExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResourceNameExprContext resourceNameExpr() throws RecognitionException {
		ResourceNameExprContext _localctx = new ResourceNameExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_resourceNameExpr);
		int _la;
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				match(ID);
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DOT_ID) {
					{
					{
					setState(68);
					match(DOT_ID);
					}
					}
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case DIVIDE:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				filePath();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassNameExprContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MyxqlJobParser.ID, 0); }
		public List<TerminalNode> DOT_ID() { return getTokens(MyxqlJobParser.DOT_ID); }
		public TerminalNode DOT_ID(int i) {
			return getToken(MyxqlJobParser.DOT_ID, i);
		}
		public ClassNameExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classNameExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).enterClassNameExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).exitClassNameExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyxqlJobParserVisitor ) return ((MyxqlJobParserVisitor<? extends T>)visitor).visitClassNameExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassNameExprContext classNameExpr() throws RecognitionException {
		ClassNameExprContext _localctx = new ClassNameExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classNameExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(ID);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT_ID) {
				{
				{
				setState(78);
				match(DOT_ID);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsExprContext extends ParserRuleContext {
		public List<ParamExprContext> paramExpr() {
			return getRuleContexts(ParamExprContext.class);
		}
		public ParamExprContext paramExpr(int i) {
			return getRuleContext(ParamExprContext.class,i);
		}
		public ParamsExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramsExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).enterParamsExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).exitParamsExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyxqlJobParserVisitor ) return ((MyxqlJobParserVisitor<? extends T>)visitor).visitParamsExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsExprContext paramsExpr() throws RecognitionException {
		ParamsExprContext _localctx = new ParamsExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_paramsExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			paramExpr();
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIVIDE) | (1L << ID) | (1L << STRING_LITERAL))) != 0)) {
				{
				{
				setState(85);
				paramExpr();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamExprContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(MyxqlJobParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MyxqlJobParser.ID, i);
		}
		public List<TerminalNode> DOT_ID() { return getTokens(MyxqlJobParser.DOT_ID); }
		public TerminalNode DOT_ID(int i) {
			return getToken(MyxqlJobParser.DOT_ID, i);
		}
		public FilePathContext filePath() {
			return getRuleContext(FilePathContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(MyxqlJobParser.STRING_LITERAL, 0); }
		public ParamExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).enterParamExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).exitParamExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyxqlJobParserVisitor ) return ((MyxqlJobParserVisitor<? extends T>)visitor).visitParamExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamExprContext paramExpr() throws RecognitionException {
		ParamExprContext _localctx = new ParamExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_paramExpr);
		int _la;
		try {
			int _alt;
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				match(ID);
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DOT_ID) {
					{
					{
					setState(92);
					match(DOT_ID);
					}
					}
					setState(97);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				filePath();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				match(ID);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DOT_ID) {
					{
					{
					setState(100);
					match(DOT_ID);
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(106);
						match(DIVIDE);
						setState(108);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==DIVIDE) {
							{
							setState(107);
							match(DIVIDE);
							}
						}

						setState(110);
						match(ID);
						setState(114);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==DOT_ID) {
							{
							{
							setState(111);
							match(DOT_ID);
							}
							}
							setState(116);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						} 
					}
					setState(121);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(122);
				match(STRING_LITERAL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilePathContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(MyxqlJobParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MyxqlJobParser.ID, i);
		}
		public List<TerminalNode> DOT_ID() { return getTokens(MyxqlJobParser.DOT_ID); }
		public TerminalNode DOT_ID(int i) {
			return getToken(MyxqlJobParser.DOT_ID, i);
		}
		public FilePathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filePath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).enterFilePath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyxqlJobParserListener ) ((MyxqlJobParserListener)listener).exitFilePath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyxqlJobParserVisitor ) return ((MyxqlJobParserVisitor<? extends T>)visitor).visitFilePath(this);
			else return visitor.visitChildren(this);
		}
	}
